# Skypro_cw.3_backend-dev_Okruzhnov

./: .gitignore  README.md  main.py  pyproject.toml
package_Skypro_cw.2_backend-dev_Okruzhnov/: __init__.py
package_Skypro_cw2/: classes.py  function_dict_format_operations.py  function_load_data.py  function_result_output.py  functions.py
package_Skypro_cw3/: function_dict_format_operations.py  function_load_data.py  function_result_output.py
tests/: test_function_dict_format_operations.py  test_load_data.py  test_result_output.py
